--- a/src/pages/sidnUp/tpl.hbs
+++ b/src/pages/sidnUp/tpl.hbs
@@ -1,18 +1,18 @@
+<div class="signUp">
+    <div class="layout">
+        <div class="form">
+            <h1>{{title}}</h1>
 
-<div class="layout">
+            <form>
+                <div>{{{inputLogin}}}</div>
+                <div>{{{inputMail}}}</div>
+                <div>{{{inputName}}}</div>
+                <div>{{{inputSurname}}}</div>
+                <div>{{{inputPassword}}}</div>
+                <div class="wrong">{{{inputWrong}}}</div>
+            </form>
+            <div>{{{btn}}}</div>
 
-    <div class="form">
-        <h2>{{title}}</h2>
-
-        <form>
-            <div>{{{inputLogin}}}</div>
-            <div>{{{inputMail}}}</div>
-            <div>{{{inputName}}}</div>
-            <div>{{{inputSurname}}}</div>
-            <div>{{{inputPassword}}}</div>
-            <div class="wrong">{{{inputWrong}}}</div>
-        </form>
-        <div>{{{btn}}}</div>
-
+        </div>
     </div>
 </div>
