--- a/index.hbs
+++ b/index.hbs
@@ -1,20 +1,19 @@
 
+
 <div class="layout">
 
     <div class="row">
-        <div class="col">{{ page2
-                inputName=inputName
-                inputMail=inputMail
-                inputLogin=inputLogin
-                inputTel=inputTel
-                inputPassword=inputPassword }}
 
-            <p>кошмар</p>
+            <a href="./src/pages/sidnIn">signIn</a>
+            <a href="./src/pages/sidnUp">signUp</a>
+            <a href="./src/pages/profile">profile</a>
+            <a href="./src/pages/profileEdit">profileEdit</a>
+            <a href="./src/pages/chat">chat</a>
+            <a href="./src/pages/error404">error404</a>
+            <a href="./src/pages/error505">error505</a>
 
-            </div>
-        <div class="col">{{ page2 }}</div>
     </div>
-
 </div>
+
 
 
