--- a/src/components/input/style.scss
+++ b/src/components/input/style.scss
@@ -1,5 +1,5 @@
 .input {
-	width: 300px;
+	width: clamp(300px, 100%, 1000px);
 	height: 50px;
 	margin: 20px 0;
 	border: 1px solid rgba( 169, 169, 169, .5);
