--- a/src/pages/sidnIn/tpl.hbs
+++ b/src/pages/sidnIn/tpl.hbs
@@ -1,16 +1,21 @@
+<div class="signIn">
+    <div class="layout">
 
-<div class="layout">
+        <div class="form">
 
-    <div class="form">
-        <h2>{{title}}</h2>
+            <h1>{{title}}</h1>
 
-        <form>
-            <div>{{{input1}}}</div>
-            <div>{{{input2}}}</div>
-        </form>
-        <div>{{{btn}}}</div>
+            <form>
+                <div class="signInInput">{{{input1}}}</div>
+                <div class="signInInput">{{{input2}}}</div>
+                <div class="signInInput">{{{btn}}}</div>
+            </form>
 
-        <a href="" class="link">Create account</a>
+
+            <a href="" class="link">Create account</a>
+
+
+        </div>
 
 
     </div>
