--- a/src/pages/sidnUp/style.scss
+++ b/src/pages/sidnUp/style.scss
@@ -1,31 +1,30 @@
-* {
-	box-sizing: border-box;
-}
 
-.layout {
-	width: 100%;
-	height: 100vh;
-	background-color: #f5f5f5;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.form {
-	height: 70%;
-	padding: 20px;
-	margin-top: -100px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-
-}
-
-.wrong {
-	input {
-		border: 1px solid #d83697;
-		background-color: rgba(216,54,151, .1);
+.signUp {
+	.form {
+		height: 70%;
+		width: 40%;
+		padding: 20px;
+		margin-top: -100px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 	}
+
+
+	.wrong {
+		input {
+			border: 1px solid var(--color-pink);
+			background-color: var(--color-lightPink);
+		}
+	}
+
+	h1, a {
+		text-align: center;
+	}
+
+
 }
+
+
 
 
