--- a/src/pages/error500/tpl.hbs
+++ b/src/pages/error500/tpl.hbs
@@ -3,8 +3,8 @@
 
     <div class="message">
 
-        <p>505</p>
-        <p>SORRY! WE ARE WORKING ON IT!</p>
+        <p>500</p>
+        <p>INTERNAL SERVER ERROR!</p>
         <a href="">BACK</a>
 
     </div>
