--- a/src/pages/profileEdit/tpl.hbs
+++ b/src/pages/profileEdit/tpl.hbs
@@ -17,11 +17,11 @@
 
             <form>
 
-                <div class="input">{{{inputName}}}</div> <br/>
-                <div class="input">{{{inputMail}}}</div> <br/>
-                <div class="input">{{{inputLogin}}}</div> <br/>
-                <div class="input">{{{inputTel}}}</div> <br/>
-                <div class="input">{{{inputPassword}}}</div> <br/>
+                <div class="input">{{{inputName}}}</div>
+                <div class="input">{{{inputMail}}}</div>
+                <div class="input">{{{inputLogin}}}</div>
+                <div class="input">{{{inputTel}}}</div>
+                <div class="input">{{{inputPassword}}}</div>
 
                 <div class="links">
                     <a>Cancel</a>
