--- a/index.hbs
+++ b/index.hbs
@@ -4,13 +4,13 @@
 
     <div class="row">
 
-            <a href="./src/pages/sidnIn">signIn</a>
-            <a href="./src/pages/sidnUp">signUp</a>
-            <a href="./src/pages/profile">profile</a>
-            <a href="./src/pages/profileEdit">profileEdit</a>
-            <a href="./src/pages/chat">chat</a>
-            <a href="./src/pages/error404">error404</a>
-            <a href="./src/pages/error505">error505</a>
+            <a href="src/pages/sidnIn">signIn</a>
+            <a href="src/pages/sidnUp">signUp</a>
+            <a href="src/pages/profile">profile</a>
+            <a href="src/pages/profileEdit">profileEdit</a>
+            <a href="src/pages/chat">chat</a>
+            <a href="src/pages/error404">error404</a>
+            <a href="src/pages/error500">error500</a>
 
     </div>
 </div>
